Inits version 5.1.0.